Mostly just new references for videos from JSON

--- a/hack/Couchy/Couchy/Base.lproj/Main.storyboard
+++ b/hack/Couchy/Couchy/Base.lproj/Main.storyboard
@@ -52,8 +52,13 @@
                                     <segue destination="TYw-L5-coq" kind="push" id="TUK-XA-su0"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQm-CZ-0R7">
-                                <rect key="frame" x="137" y="533" width="46" height="30"/>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Welcome to Couch" id="VAO-Cr-IO8">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="VKf-OA-yM6">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kQm-CZ-0R7">
+                                <rect key="frame" x="258" y="7" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Skip">
@@ -63,10 +68,8 @@
                                     <segue destination="7Tl-Be-Au6" kind="push" id="ugz-mD-p5N"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Welcome to Couch" id="VAO-Cr-IO8"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bpg-eA-JQJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="ppc-1s-fNW"/>
